# Schwarzschild-black-hole-geodesic-tracer

./: CMakeLists.txt  README.md
src/: Camera.cpp  Camera.h  GeodesicIntegrator.cpp  GeodesicIntegrator.h  Image.cpp  Image.h  Vec3.h  main.cpp  main_gpu.cpp  present_frag.glsl
src/shaders/: frag.glsl  vert.glsl
